--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,3 +1,5 @@
+<% if logged_in? %>
+<p>ログインユーザー：<%= current_user.name %></p>
 <h1>タスク一覧</h1>
 
 <ul>
@@ -7,3 +9,8 @@
 </ul>
 
 <%= link_to '新規タスクの投稿', new_task_path %>
+
+<% else %>
+ <h1>Welcome to Task-List</h1>
+ <%= link_to 'Sign up now!', signup_path %>
+ <% end %>
